# libhwbtc

./: CMakeLists.txt  LICENSE.txt  README.md
cli/: CMakeLists.txt  cli.cpp
include/: libhwbtc.h  libhwbtc.hpp
src/: CMakeLists.txt  error.c  libhwbtc_internal.h  trezor.c
test/: CMakeLists.txt  error_test.cpp  main_test.cpp  test_helper.h
